[beginProject] разделение компонента карточки с новостью на несколько общих компонентов

--- a/my-app/src/components/Footer/index.scss
+++ b/my-app/src/components/Footer/index.scss
@@ -206,6 +206,10 @@ display:flex;
         width:30px+65px+30px;
         height:30px;
         justify-content:space-between;
+        img{
+          width: 30px;
+          height: 30px;
+        }
       }
     }
   }
