--- a/my-app/src/components/IconsMessageGroup/IconsMessageGroup.module.scss
+++ b/my-app/src/components/IconsMessageGroup/IconsMessageGroup.module.scss
@@ -3,5 +3,8 @@
     justify-content: space-between;
     width: 109.07px;
     height: 30px;
-    
+    img{
+        width: 16.67px;
+        height: 16.67px;
+    }
 }
