--- a/my-app/src/components/FormsContacts/FormsContacts.module.scss
+++ b/my-app/src/components/FormsContacts/FormsContacts.module.scss
@@ -14,6 +14,7 @@ box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
     justify-content: space-between;
     margin-left: 38px;
     margin-top: 40px;
+    align-items: center;
 }
 .group__div{
     display: flex;
@@ -61,19 +62,7 @@ padding: 0px 0px 0px 55px;
         width: 20px;
         height: 20px;
     }
-    .cursor__img{
-        width: 11.63px;
-        height: 17px;
-    }
-    p{
-        width: 59px;
-height: 17px;
-margin: 0px 114.37px 0px 15px;
-display: flex;
-font-family: 'Inter Medium';
-font-size: 14px;
-line-height: 17px;
-    }
+   
 }
 .formgroup2__div{
     display: flex;
@@ -85,9 +74,21 @@ line-height: 17px;
         width: 173px;
         height: 17px;
     }
-    input{
+    .form__inputEmail{
         background-color: #F8F8F8;
         border-color:#FFFEFE;
+        font-family: 'Inter Medium';
+        font-size: 14px;
+line-height: 17px;
+color: #686868;
+box-sizing: border-box;
+padding: 0px 0px 0px 52.5px;
+border:0px;
+    width: 260px;
+    height: 50px;
+    border-radius: 30px;
+    display: flex;
+
     }
 }
 .mail__div{
@@ -96,19 +97,52 @@ line-height: 17px;
     height: 17.5px;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
-    left: 1080px;
-    bottom: 670px;
+    position: relative;
+    right: 240px;
+    top: 46px;
+
     img{
         width: 17.5px;
         height: 17.5px;
     }
-    p{
-        width: 58px;
+
+}
+
+.message__div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 548px;
+    height: 200px+15px+17px;
+    margin-top:30px;
+    label{
+        width: 120px;
         height: 17px;
-        font-family: 'Inter Medium';
-        font-size: 14px;
+    }
+    .form__textarea{
+        width: 548px;
+        height: 200px;
+        background-color: #F8F8F8;
+border-radius: 30px;
+padding-top: 15px;
+padding-left:20px;
+box-sizing: border-box;
+font-family: 'Inter Medium';
+font-size: 14px;
 line-height: 17px;
 color: #686868;
+border:0px;
+resize: none;
     }
+}
+.form__button{
+    width: 200px;
+height: 48px;
+background-color: #664EF9;
+border-radius: 33px;
+font-family: 'Inter Bold';
+font-size: 16px;
+line-height: 24px;
+color: #FFFFFF;
+
 }
