--- a/my-app/src/components/RouteMainAvtorization/RouteMainAvtorization.module.scss
+++ b/my-app/src/components/RouteMainAvtorization/RouteMainAvtorization.module.scss
@@ -1,6 +1,11 @@
-.avtorizationMain__section{
+.positionModul__div{
+    position: fixed;
+    left: 0px;
+    top:0px;
+    right: 0px;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
     width: 1440px;
     height: 900px;
-    background-image: linear-gradient(0deg, rgba(126, 106, 243, 0.7) 1.04%, rgba(101, 64, 205, 0.7) 100%), url('../../image/avtorization/depositphotos_279168284-stock-illustration-urban-vector-city-map-of.png');
-    background-repeat: round;
 }
