[modulebranch] завершение страницы авторизации и начало создания страницы регистрации

--- a/my-app/src/components/common/EnterMainSection/EnterMainSection.module.scss
+++ b/my-app/src/components/common/EnterMainSection/EnterMainSection.module.scss
@@ -1,4 +1,4 @@
-.avtorizationMain__section{
+.enterMain__section{
     width: 1440px;
     height: 900px;
     background-image: linear-gradient(0deg, rgba(126, 106, 243, 0.7) 1.04%, rgba(101, 64, 205, 0.7) 100%), url('../../../image/avtorization/depositphotos_279168284-stock-illustration-urban-vector-city-map-of.png');
