--- a/my-app/src/components/NewsTitleSection/index.scss
+++ b/my-app/src/components/NewsTitleSection/index.scss
@@ -41,12 +41,6 @@ font-size: 14px;
 line-height: 17px;
 color: #1E2123;
     }
-    .icons-news__div_group{
-      display: flex;
-      width: 34.15px+181.72px+34.15px;
-      height: 34.15px;
-      justify-content: space-between;
-      
       .icons-background__div{
         display: flex;
         align-items: center;
@@ -56,11 +50,19 @@ color: #1E2123;
         background: rgba(102, 78, 249, 0.1);
         border-radius: 19px;
       }
-    
-    }
-  
+     
   }
 } 
     
 } 
+
+.iconsbackground__img{
+  width: 17.07px;
+  height: 17.07px;
+}
+
+.iconsbackground__img_other{
+  width: 19.82px;
+  height: 19.82px;
+}
 
