--- a/my-app/src/components/FormsContacts/FormsContacts.module.scss
+++ b/my-app/src/components/FormsContacts/FormsContacts.module.scss
@@ -146,3 +146,10 @@ line-height: 24px;
 color: #FFFFFF;
 
 }
+
+.form__input{
+    width: 260px;
+    height: 50px;
+    border-radius: 30px;
+    display: flex;
+}
