--- a/my-app/src/components/PageRegistration/PageRegistration.module.scss
+++ b/my-app/src/components/PageRegistration/PageRegistration.module.scss
@@ -2,7 +2,7 @@
     margin-top: 50px;
     margin-left: 50px;
     width: 306px+50px+388px;
-    height: 30px+402.5px+48px;
+    height: 30px+474px+48px;
 
 
 }
@@ -20,7 +20,7 @@ height: 30px;
 
 .registrationInputs__div{
     display: flex;
-    height: 50px+322.5px+48px;
+    height: 50px+394px+48px;
     width: 306px;
     flex-direction: column;
     justify-content: space-between;
@@ -87,10 +87,7 @@ height: 30px;
         background-color: #F7F7F7;
 
     }
-    .checkbox__div{
-    display: flex;
-    
-    }    
+  
 .rules__div{
     display: flex;
     flex-direction: column;
@@ -102,7 +99,7 @@ height: 30px;
 .registration__div{
     display: flex;
     width: 306px+50px+388px;
-    height: 50px+322.5px+48px;
+    height: 50px+394px+48px;
     justify-content: space-between;
     margin:30px 0px 0px 0px;
 }
@@ -145,3 +142,26 @@ color: #686868;
    margin-bottom: 2px;
  
 }
+
+.errorZnasck1{
+width: 20px;
+height: 20px;
+position: absolute;
+    top: 375px;
+    left: 600px;
+
+}
+
+.errorZnasck2{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    position: absolute;
+    top: 520px;
+    left: 600px;
+}
+    
+ .userRoboto{
+    width: 306px;
+    height: 75px;
+ }   
