[modulesbranch] создание карточки с описанием комнаты в каталоге квартир

--- a/client/src/components/ViewRooms/ViewRooms.module.scss
+++ b/client/src/components/ViewRooms/ViewRooms.module.scss
@@ -115,3 +115,13 @@ border: 0px;
     height: 14px;
     margin-right: 10px;
 }
+
+.resultText__p{
+    font-family: 'Inter Bold';
+    font-size: 20px;
+line-height: 100%;
+color: #1E2123;
+margin: 0px 0px 40px 0px;
+width: 250px;
+height: 20px;
+}
