[modulesbranch] добавление секции в каталог квартир

--- a/client/src/components/CardsGold/CardsGold.module.scss
+++ b/client/src/components/CardsGold/CardsGold.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     background-color: #FFFEFE;
 border-radius: 10px;
+position: relative;
 }
 .wrapper__img{
     width: 406px;
