--- a/client/src/components/LabelGold/LabelGold.module.scss
+++ b/client/src/components/LabelGold/LabelGold.module.scss
@@ -4,12 +4,14 @@
     width: 66px;
     height: 37px;
     z-index: 1;
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     bottom: 238px;
     left: 422px;
+    position: absolute;
+    top:0px;
+    left:340px;
 }
 
 
