--- a/client/src/components/PageNewsList/index.scss
+++ b/client/src/components/PageNewsList/index.scss
@@ -105,30 +105,7 @@ img{
  margin-left: 80px;
  margin-top: 62.57px;
 }
-.namber-page__ul_bottom{
-  display: flex;
-  width: 9px+188px+17px;
-  height: 22px;
-  justify-content: space-between;
-  padding: 0px;
-  margin-left: 86.5px;
+.page-news__section ul{
   margin-top: 80px;
-  margin-bottom: 102px;
-  li{
-    a{
-      font-family: 'Inter Regular';
-      font-size: 18px;
-      line-height: 22px;
-      color: #686868;
-&:hover{
-  font-family: 'Inter Bold';
-font-size: 18px;
-line-height: 22px;
-color:#000;
-  border-bottom: 2px #FFD54F solid;
-  padding-bottom: 2px;
-}
-    }
-
-  }
+  margin-left: 86.5px;
 }
