--- a/client/src/components/ViewRooms/ViewRooms.module.scss
+++ b/client/src/components/ViewRooms/ViewRooms.module.scss
@@ -1,3 +1,4 @@
+$bgColorMes:#e2d3d3;
 .wrapper__div{
     margin-left: 80px;
     margin-top: 21.5px;
@@ -14,6 +15,8 @@
 .viewSelect__div{
 display: flex;
 align-items: center;
+height: 36px;
+width: 232px;
 }
 .viewSelect__div img:first-of-type{
     width: 15px;
@@ -124,4 +127,47 @@ color: #1E2123;
 margin: 0px 0px 40px 0px;
 width: 250px;
 height: 20px;
+}
+
+.page__div{
+    margin-top:86px;
+    margin-left: 6.5px;
+    margin-bottom: 58.58px;
+    display: flex;
+    width: 9px+1228.02px+35.78px;
+    height: 35.78px;
+    align-items: center;
+}
+.page__div ul{
+margin: 0px;
+}
+.rowLink__div{
+    display: flex;
+    width: 84px+224.52px+35.78px;
+    height: 35.78px;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 714.5px;
+}
+.rowLinkMes__div{
+    width: 35.78px;
+    height: 35.78px;
+    background-color:$bgColorMes;
+border-radius: 25px;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.rowLinkMes__div img{
+    width: 17.89px;
+    height: 17.89px;
+}
+.rowLink__div p{
+    color: #686868;
+    font-family: 'Inter Medium';
+    font-size: 14px;
+line-height: 17px;
+margin: 0px;
+
 }
