--- a/client/src/components/PanelNavigationOptions/PanelNavigationOptions.module.scss
+++ b/client/src/components/PanelNavigationOptions/PanelNavigationOptions.module.scss
@@ -1,16 +1,36 @@
 .options__div{
     display: flex;
     width: 1440px;
-    height: 82px;
+    min-height: 82px;
+    max-height: 398px;
     background-color: #fff;
     box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.08);
 
-    form{
+}
+
+.options__div form {
+
         display: flex;
         width: 62px+984px+192px;
-        height: 37px;
-    }  
+        max-height: 398px;
+        min-height: 37px;
+        flex-direction: column;
+    
 }
+
+.form__top{
+    display: flex;
+    width: 1440px;
+    height: 82px;
+}
+
+.form__bottom{
+        display: flex;
+        width: 1440px;
+       height:auto;
+        border-top:1px solid rgba(78, 100, 249, 0.1);
+}
+
 .panel1__div{
 width: 195px+62px+100px;
 height: 81px;
