[modulesbranch] добавление слайдера в каталог квартир, начало создания главной страницы и создания на ней панели вкладок

--- a/client/src/components/CardsGoldViewRow/CardsGoldViewRow.module.scss
+++ b/client/src/components/CardsGoldViewRow/CardsGoldViewRow.module.scss
@@ -171,6 +171,7 @@ color: #686868;
     height: 37px;
     margin-top: 24.89px;
     align-items: center;
+    justify-content: space-between;
 }
 .rowBottomLeft__div {
     display: flex;
