--- a/client/src/components/PanelNavigationOptions/PanelNavigationOptions.module.scss
+++ b/client/src/components/PanelNavigationOptions/PanelNavigationOptions.module.scss
@@ -79,7 +79,14 @@ border:0px;
 appearance: none;
 background-color: #F8F8F8;
 margin-left: 30px;
+outline: 0;
     }
+
+    .panel1__select:focus{
+        border: 2px solid rgba(78, 100, 249, 0.8);
+        background-color: #fff;
+    }
+
     
     .panel2__div{
         width: 25px+141px+140px+100px+25px;
