--- a/client/src/components/PageNewsList/index.scss
+++ b/client/src/components/PageNewsList/index.scss
@@ -2,7 +2,8 @@
  display: flex;
  flex-direction: column;
  background-color: #F8F8F8;
- height: 1937.57px;
+ //height: 1937.57px;
+ height: auto;
 
 }
 
@@ -98,7 +99,8 @@ img{
 .block-articles__div_center{
   display: grid;
   width: 406px*3+30.1px*2;
-  height: 500px*3+30.1px*2;
+  //height: 500px*3+30.1px*2;
+  height:auto;
   grid-template-columns: repeat(3, 406px);
   grid-template-rows: repeat(3, 500px);
   column-gap:30.1px;
